<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cvtc.android.signmeup.UserInfo"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userFirstNameTextView"
        android:text="@string/first_name"
        android:layout_toLeftOf="@+id/userPhoneEditText"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userFirstNameEditText"
        android:layout_toRightOf="@+id/userPhoneTextView"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userLastNameTextView"
        android:text="@string/last_name"
        android:layout_below="@+id/userFirstNameEditText"
        android:layout_toLeftOf="@+id/userPhoneEditText"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userLastNameEditText"
        android:inputType="textPersonName"
        android:layout_toRightOf="@+id/userPhoneTextView"
        android:layout_below="@+id/userFirstNameEditText"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userPhoneTextView"
        android:text="@string/phone_number"
        android:layout_below="@+id/userLastNameEditText"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userPhoneEditText"
        android:inputType="phone"
        android:layout_toRightOf="@+id/userPhoneTextView"
        android:layout_below="@+id/userLastNameEditText"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userEmailTextView"
        android:text="@string/email"
        android:layout_below="@+id/userPhoneEditText"
        android:layout_toLeftOf="@+id/userPhoneEditText"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userEmailEditText"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/userPhoneEditText"
        android:layout_toRightOf="@+id/userPhoneTextView"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventGroup"
        android:layout_below="@+id/userEmailEditText"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iOSDevelopmentEvent"
            android:text="@string/ios_development"
            android:layout_marginLeft="100dp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/androidDevelopmentEvent"
            android:text="@string/android_development"
            android:layout_marginLeft="100dp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phpDevelopmentEvent"
            android:text="@string/php_development"
            android:layout_marginLeft="100dp"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventGroup"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_me_up"/>

</RelativeLayout>
